Fix contact on mobile

--- a/source/stylesheets/_vars.scss
+++ b/source/stylesheets/_vars.scss
@@ -1,4 +1,4 @@
-$break-mobile: 400px;
+$break-mobile: 470px;
 $break-tablet: 900px;
 $break-hugescreen: 1400px;
 
